--- a/views/article.hbs
+++ b/views/article.hbs
@@ -2,5 +2,6 @@
     <h1>{{name}}</h1>
     <p> Published {{published}}</p>
     <p><img src="/images/{{image}}" alt=""></p>
+    <p>Author: {{author_id}}</p>
     {{{body}}}
 {{/article}}
