--- a/views/author.hbs
+++ b/views/author.hbs
@@ -1,13 +1,12 @@
 {{#author}}
-    <h1>{{name}}</h1>
+    <h2>{{name}}'s articles</h2>
 {{/author}}
+
 
 <div class="article-list">
     {{#articles}}
         <article>
-            <a href="/article/{{slug}}">
-                <img src="/images/{{image}}" alt="">
-            </a>
+            <a href="/article/{{slug}}"></a><img src="/images/{{image}}" alt="">
             <h2><a href="/article/{{slug}}">{{name}}</a></h2>
         </article>
     {{/articles}}
