--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,9 +3,7 @@
 <div class="article-list">
     {{#articles}}
         <article>
-            <a href="/article/{{slug}}">
-                <img src="/images/{{image}}" alt="">
-            </a>
+            <a href="/article/{{slug}}"></a><img src="/images/{{image}}" alt="">
             <h2><a href="/article/{{slug}}">{{name}}</a></h2>
         </article>
     {{/articles}}
