--- a/views/author.hbs
+++ b/views/author.hbs
@@ -1,12 +1,9 @@
-{{#author}}
-    <h2>{{name}}'s articles</h2>
-{{/author}}
-
+<h1>{{#author}}{{name}}{{/author}}</h1>
 
 <div class="article-list">
     {{#articles}}
         <article>
-            <a href="/article/{{slug}}"></a><img src="/images/{{image}}" alt="">
+            <a href="/article/{{slug}}"><img src="/images/{{image}}" alt=""></a>
             <h2><a href="/article/{{slug}}">{{name}}</a></h2>
         </article>
     {{/articles}}
