--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <div class="article-list">
     {{#articles}}
         <article>
-            <a href="/article/{{slug}}"></a><img src="/images/{{image}}" alt="">
+            <a href="/article/{{slug}}"><img src="/images/{{image}}" alt=""></a>
             <h2><a href="/article/{{slug}}">{{name}}</a></h2>
         </article>
     {{/articles}}
