--- a/views/article.hbs
+++ b/views/article.hbs
@@ -2,6 +2,6 @@
     <h1>{{name}}</h1>
     <p> Published {{published}}</p>
     <p><img src="/images/{{image}}" alt=""></p>
-    <p>Author: <a href="/author/{{author_id}}">{{author}}</a>
+    <p>Author: <a href="/author/{{author_id}}">{{author_name}}</a>
     {{{body}}}
 {{/article}}
